fix svg on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -113,6 +113,7 @@
 
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 1.6rem;
   color: var(--color-text);
   text-decoration: none;
