--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -92,7 +92,7 @@
 }
 
 .btnFavourite {
-  height: auto;
+  height: 100%;
   min-width: 4.2rem;
   aspect-ratio: 1;
   box-shadow: none;
